Respect base class constructor arguments when code-completing a constructor.

REVIEW: 100924
BUG: 255038