languages/cpp/tests/test_cppcodecompletion.cpp
@@ -48,6 +48,7 @@
 #include "codecompletion/context.h"
 #include "codecompletion/helpers.h"
 #include "codecompletion/item.h"
+#include "codecompletion/implementationhelperitem.h"
 #include "cpppreprocessenvironment.h"
 #include <language/duchain/classdeclaration.h>
 #include "cppduchain/missingdeclarationproblem.h"
@@ -832,6 +833,49 @@ void TestCppCodeCompletion::testConstructorCompletion() {
   }
 }
 
+void TestCppCodeCompletion::testParentConstructor_data()
+{
+  QTest::addColumn<QString>("code");        // existing source code
+  QTest::addColumn<QString>("completion");  // completion contents
+
+  // Parent has no constructor
+  QTest::newRow("NoParentConstructor") << "class A {}; class B : public A { B (int i); };" << "B::B(int i) { }";
+  // Argument name mismatch - choose it anyway
+  QTest::newRow("ArgNameMismatch") << "class A { A(int j) {} }; class B : public A { B(int i); };" << "B::B(int i): A(i) { }";
+  // Between two arguments with matching type, prefer one with matching name
+  QTest::newRow("PreferNameMatch") << "class A { A(int i, int j) {} }; class B : public A { B(int j, int i); };" << "B::B(int j, int i): A(i, j) { }";
+  // Argument type mismatch - do not choose anything for this argument
+  QTest::newRow("ArgTypeMismatch") << "class A { A(char i) {} }; class B : public A { B(int i); };" << "B::B(int i): A() { }";
+  // Some arguments match, others do not - leave the latter blank
+  QTest::newRow("SomeArgumentsMatch") << "class A { A(int i, char j) {} }; class B : public A { B(int i, int j); };" << "B::B(int i, int j): A(i, ) { }";
+  // Parent class has multiple constructors - choose the best matching
+  QTest::newRow("MultipleConstructors") << "class A { A(char c) {} A(int i, int j) {} }; class B : public A { B(int i); };" << "B::B(int i): A(i, i) { }";
+  QTest::newRow("MultipleConstructorsNoFullMatch") << "class A { A(char c, long l) {} A(int i, long l) {} }; class B : public A { B(int i); };" << "B::B(int i): A(i, ) { }";
+  // Omit call to default constructor if it is the best match
+  QTest::newRow("BestMatchDefault") << "class A { A() {} A(char c) {} }; class B : public A { B(int i); };" << "B::B(int i) { }";
+
+  // Multiple parents, each has its own matches
+  QTest::newRow("MultipleParents") << "class A { A(int i, char c) {} }; class B { B(char d, long l) {} }; class C : public A, public B { C(int i, long l, char c); };"
+    << "C::C(int i, long int l, char c): A(i, c), B(c, l) { }";
+  // Last check
+  QTest::newRow("ComplexCase") << "class A { A(int i, double d, char c) {} A(int i, double d, long l) {} };"
+    "class B { B(double d, int j) {} B(char c) {} };"
+    "class C { };" 
+    "class D : public A, public B, public C { D(short a1, double a2, long a3, int a4); };" <<
+    "D::D(short int a1, double a2, long int a3, int a4): A(a4, a2, a3), B(a2, a4) { }";
+}
+
+void TestCppCodeCompletion::testParentConstructor()
+{
+  QFETCH(QString, code);
+  QFETCH(QString, completion);
+  TopDUContext* context = parse(code.toAscii(), DumpNone);
+  DUChainWriteLocker lock(DUChain::lock());
+  CompletionItemTester tester(context, "void");  // Force a function context
+  Cpp::ImplementationHelperItem* constructorItem = dynamic_cast<Cpp::ImplementationHelperItem*>(tester.items[0].data());
+  QCOMPARE(constructorItem->insertionText().simplified(), completion.simplified());
+}
+
 void TestCppCodeCompletion::testSignalSlotCompletion() {
     // By processing qobjectdefs.h, we make sure that the qt-specific macros are defined in the duchain through overriding (see setuphelpers.cpp)
     addInclude("/qobjectdefs.h", "#define signals\n#define slots\n#define Q_SIGNALS\n#define Q_SLOTS\n#define Q_PRIVATE_SLOT\n#define SIGNAL\n#define SLOT\n int n;\n");
@@ -1445,7 +1489,7 @@ void TestCppCodeCompletion::testSameNamespace() {
   {
     //                 0         1         2         3         4         5         6         7
     //                 0123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890123456789012
-    QByteArray method("namespace A { class C { }; void test2(); } namespace A { void test() { } class C {};}");
+    QByteArray method("namespace A { class C { }; void test2() {} } namespace A { void test() { } class C {};}");
 
     TopDUContext* top = parse(method, DumpNone);
 
